--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
             crimen. Los seguidores de esta clase que se van
             de aventuras se llaman a sí mismos guerreros, 
             mercenarios, sicarios o, simplemente, aventureros.
-        </article>
+    </article>
     
     <article>
-            Alineamiento: cualquiera
-
-            Dado de golpe: d10
-            
-            Habilidades de clase: Artesanía (Int), Intimidar (Car), Montar (Des), Nadar (Fue), Trato con animales (Car) y Trepar (Fue).
-            Puntos de habilidad en el nivel 1: (2 + modificador de Inteligencia) x4 
+            Alineamiento: cualquiera <br>
+            Dado de golpe: d10 <br>            
+            Habilidades de clase:
+             Artesanía (Int), Intimidar (Car), Montar (Des), Nadar (Fue), Trato con animales (Car) y Trepar (Fue).
+            Puntos de habilidad en el nivel 1: (2 + modificador de Inteligencia) x4 <br>
             Puntos de habilidad por nivel: 2 + modificador de Inteligencia.
     </article>
 
