--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Supermercado+One" rel="stylesheet"> 
     <title>Solo Rol</title>
 </head>
+<header>
+
+</header>
 <body>
+    <nav>
+            <ul>
+                    <li><a href="#">MANUAL </a></li>
+                    <li><a href="#">NOTICIAS</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                    <li style="float:right"><a class="active" href="#about">ACCESO</a></li>
+                  </ul> 
+    </nav>
 <div class="clase">
     <h1>GUERRERO</h1>
 </div>
