fondos y flechas ademas notoes nueva platilla

--- a/clase.html
+++ b/clase.html
@@ -37,7 +37,7 @@
                 <a href="dotes.html" ><img class="icon" src="img/icon6.png" alt="seis" ></a>
             <p class="texto">DOTES</p>
         </div>    
-
+<h1>CLASE</h1>
         
             <div id="bgventana">
                 <div id="ventana">
