--- a/equipo.html
+++ b/equipo.html
@@ -38,7 +38,7 @@
             <p class="texto">DOTES</p>
         </div>    
 
-        
+        <H1>EQUIPO</H1>
             <div id="bgventana">
                 <div id="ventana">
                         <a href="javascript:modal('hidden');" class="texto">Cerrar</a>
