--- a/plantilla.html
+++ b/plantilla.html
@@ -5,28 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>plantilla</title>
-    <link rel="stylesheet" href="plantilla.css">
-    <link rel="stylesheet" href="css/bootstrap-.min.css">
+    <link rel="stylesheet" href="plantilla.css">  
+    <link rel="stylesheet" href="css/bootstrap.min.css">  
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 </head>
-<body>
+<header>
+   
+</header>    
+ 
+<body class="bg-primary">      
     <div class="nombre">
-        <a class="nom">Nombre</a><a class="der">-></a>
-    </div>
-    <div class="descripcion">
-        <span class="titulo">Descripción</span> <br> <br>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis
-         itaque eaque qui fuga quisquam! Porro magnam libero ipsum commodi,
-          debitis consequuntur recusandae sed voluptatem nam enim natus quibusdam
-           impedit earum.
-    </div>
-    <div class="Caracter">
-        <a class="habilidad">ROLES</a>
-        <div class="skill">
-            <img src="img/icon5.png" alt="fuerza">
-            <img src="img/icon4.png" alt="fuerza">
-            <img src="img/icon6.png" alt="fuerza">
-        </div>
-    </div>
+    <a class="f-izquierda" href="#"><</a> <span class="n-nombre">Nombre</span> <a class="f-derecha" href="paladin.html">></a>
+    </div> 
+
+        
 </body>
 </html>
