--- a/razas/Guerrero.html
+++ b/razas/Guerrero.html
@@ -4,38 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>plantilla</title>
+    <title>GUERRERO</title>
     <link rel="stylesheet" href="../plantilla.css">  
-    <link rel="stylesheet" href="../css/bootstrap.min.css">  
+        
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
-    <style>
-    .f-derecha{
-    text-decoration: none;
-    font-size: 80px;
-    color: rgb(24, 224, 84);
-    text-shadow: 2px 4px  rgba(0, 0, 0, 0.5);
-    position: absolute;
-    margin-left: 70px;
-    padding: 0;
-    }
-
-    body{
-    background-color: rgb(236, 10, 10);
-    padding: 0;
-    margin: 0 0 0 0;
-    font-family: "roboto";
-}
-
-    </style>
-</head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </head>
 <header>
    
 </header>    
  
 <body class="bg-primary">      
     <div class="nombre">
-    <a class="f-izquierda" href="#"><</a> <span class="n-nombre">GUERRERO</span> <a class="f-derecha" href="paladin.html">></a>
-    </div> 
+       <div >
+           <img id="f-izquierda" src="../img/izquierda.png" alt="">
+           <img id="f-izquierda-verde" src="../img/izquierda2.png" alt="">
+            <a id="titulo">GUERRERO</a>       
+           <img id="f-derecha" src="../img/derecha.png" alt="">
+           <img id="f-derecha-verde" src="../img/derecha2.png" alt="">
+        </div> 
+    </div>
+    <div class="descripcion">
+        <p>Descripción</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga esse, nihil repudiandae iste libero odit inventore, dolore hic vero id distinctio eius excepturi deleniti illo tempore voluptatibus laboriosam eveniet in!</p>
+    </div>
+   
 
         
 </body>
