cambio de fondo

--- a/Clases/Guerrero.html
+++ b/Clases/Guerrero.html
@@ -16,7 +16,7 @@
    
 </header>    
  
-<body>      
+<body class="fondo">      
     <div class="nombre">
        <div >
            <img id="f-izquierda" src="../img/izquierda.png" alt="">
