--- a/Clases/paladin.html
+++ b/Clases/paladin.html
@@ -21,7 +21,7 @@
           <a href="guerrero.html"><img id="f-izquierda-verde" src="../img/izquierda2.png" alt=""></a>
            <a id="titulo">PALADIN</a>       
            <img id="f-derecha" src="../img/derecha.png" alt="">
-           <img id="f-derecha-verde" src="../img/derecha2.png" alt="">
+           <a href="barbaro.html"> <img id="f-derecha-verde" src="../img/derecha2.png" alt=""></a>
         </div> 
     </div>
     <div class="descripcion">
