--- a/Clases/Guerrero.html
+++ b/Clases/Guerrero.html
@@ -14,12 +14,17 @@
     </head>
 <header>
    
+
+    
+
+
+
 </header>    
  
 <body class="fondo">      
     <div class="nombre">
        <div >
-           <img id="f-izquierda" src="../img/izquierda.png" alt="">
+           <a href=""></a> <img id="f-izquierda" src="../img/izquierda.png" alt="">
            <img id="f-izquierda-verde" src="../img/izquierda2.png" alt="">
             <a id="titulo">GUERRERO</a>       
            <img id="f-derecha" src="../img/derecha.png" alt="">
