--- a/Clases/paladin.html
+++ b/Clases/paladin.html
@@ -18,10 +18,10 @@
        <div >
            
           <img id="f-izquierda" src="../img/izquierda.png" alt="" >
-          <a href="guerrero.html"><img id="f-izquierda-verde" src="../img/izquierda2.png" alt=""></a>
+          <a href="Guerrero.html"><img id="f-izquierda-verde" src="../img/izquierda2.png" alt=""></a>
            <a id="titulo">PALADIN</a>       
            <img id="f-derecha" src="../img/derecha.png" alt="">
-           <a href="barbaro.html"> <img id="f-derecha-verde" src="../img/derecha2.png" alt=""></a>
+           <a href="Barbaro.html"> <img id="f-derecha-verde" src="../img/derecha2.png" alt=""></a>
         </div> 
     </div>
     <div class="descripcion">
