--- a/Clases/Barbaro.html
+++ b/Clases/Barbaro.html
@@ -16,7 +16,7 @@
    
 </header>    
  
-<body class="fondo">      
+<body class="fondo-barbaro">      
     <div class="nombre">
        <div >
         <a href="paladin.html"> <img id="f-izquierda" src="../img/izquierda.png" alt="">
