--- a/Clases/Guerrero.html
+++ b/Clases/Guerrero.html
@@ -15,13 +15,9 @@
 <header>
    
 
-    
-
-
-
 </header>    
  
-<body class="fondo">      
+<body class="fondo-guerrero">      
     <div class="nombre">
        <div >
            <a href=""></a> <img id="f-izquierda" src="../img/izquierda.png" alt="">
