--- a/Clases/paladin.html
+++ b/Clases/paladin.html
@@ -16,12 +16,13 @@
    
 </header>    
  
-<body class="fondo-paladin">      
+<body class="fondo-paladin">  
+       
     <div class="nombre">
        <div >
         <a href="Guerrero.html"> <img id="f-izquierda" src="../img/izquierda.png" alt="">
            <img id="f-izquierda-verde" src="../img/izquierda2.png" alt="">
-            <a id="titulo">Paladin</a>       
+            <a id="titulo">PALADIN</a>       
            <img id="f-derecha" src="../img/derecha.png" alt="">
          <a href="Barbaro.html"><img id="f-derecha-verde" src="../img/derecha2.png" alt=""></a>
         </div> 
@@ -46,7 +47,9 @@
     </div>  
     <div id="modal">
         <div id="ventana">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum iure numquam commodi distinctio. Dolorum adipisci nisi sint quisquam quo, vitae est eligendi aliquam quod quas, magnam blanditiis. Fugit, optio rem?</p>
+            <p>Habilidades Cláseas: Arte (Int), Montar (Des), Nadar (Fue), Saltar (Fue), Trato con animales (Car), Trepar (Fue).
+                    Ptos. de habilidad (nivel 1): (2+ modificador de Int) x4
+                    Ptos. de habilidad cada nivel subsiguiente: 2+ modificador de Int </p>
             <a href="javascript:modal('hidden');" >cerrar</a>
         </div>
     </div>      
