footer con iconos

--- a/Clases/Barbaro.html
+++ b/Clases/Barbaro.html
@@ -30,27 +30,50 @@
     </div>
     <div class="descripcion">
         <p>Descripción</p>
-    <p> Esta clase pertenecen el caballero embarcado en una búsqueda, 
-        el señor feudal dedidado a la conquista, el campeón del rey, 
-        el infante de élite, el mercenario veterano y el rey bandido.
-        Los guerreros pueden ser leales defensores de los necesitados,
-        crueles merodeadores o valientes aventureros. Algunos son
-        bellísimas personas dispuestos a enfrentarse a la muerte a 
-        cambio de un bien mayor. Sin embargo, otros se encuentran
-        entre las peores gentes que es posible hallar: las que matan 
-        sin escrúpulos para obtener un beneficio personal, o incluso
-        por deporte. Los guerreros que no van de aventuras pueden ser
-        soldados, guardias, guardaespaldas, campeones o matones 
-        dedicados al crimen. Los seguidores de esta clase que 
-        se van de aventuras se llaman a sí mismos guerreros, mercenarios, 
-        sicarios o, simplemente, aventureros.</p>
+    <p> Procedentes de los gélidos yermos del norte y las
+         infernales junglas del sur, llegan algunos guerreros 
+         a los que, además de valientes, podría llamarse
+          temerarios. Las gentes civilizadas los llaman bárbaros
+           o bersérkers, y los tachan de ser personas impías,
+            causantes del caos y culpables de haber cometido
+             atrocidades. Sin embargo, estos "bárbaros" han 
+             demostrado su entereza y valía a todos sus posibles 
+             aliados, y han dejado patente sus recursos,
+              astucia, perseverancia y falta de misericordia 
+              hacia los enemigos que los subestimaron.</p>
         <a href="javascript:modal('visible');" >Mas..</a>
     </div>  
     <div id="modal">
         <div id="ventana">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum iure numquam commodi distinctio. Dolorum adipisci nisi sint quisquam quo, vitae est eligendi aliquam quod quas, magnam blanditiis. Fugit, optio rem?</p>
+            <p>Dado de Golpe: d12 </p>
+
+                   <p> Habilidades Cláseas:</p> <br>
+                    Arte (Int) <br>
+                     Escuchar (Sab) <br>
+                     Intimidar (Car) <br>
+                     Intuir la dirección (Sab) <br>
+                      Montar (Des) <br>
+                       Nadar (Fue) <br>
+                        Saltar (Fue) <br>
+                         Supervivencia (Sab) <br>
+                          Trato con animales (Car) <br>
+                          Trepar (Fue) <br>
+                    Puntos de habilidad (nivel 1): (4+ modificador de Int) x4 <br>
+                    Puntos de habilidad cada nivel subsiguiente: 4+ modificador de Int <br>
             <a href="javascript:modal('hidden');" >cerrar</a>
+            <img class="logo" src="../img/explorador.png" alt="">
         </div>
-    </div>      
+    </div>   
+
+    <footer>
+        <div>
+        <img class="icon" src="../img/icon1.png" alt="">
+        <img class="icon" src="../img/icon2.png" alt="">
+        <img class="icon" src="../img/icon3.png" alt="">
+        <img class="icon" src="../img/icon4.png" alt="">
+        <img class="icon" src="../img/icon5.png" alt="">
+        <img class="icon" src="../img/icon6.png" alt="">
+    </div>
+    </footer> 
 </body>
 </html>
