--- a/Clases/Guerrero.html
+++ b/Clases/Guerrero.html
@@ -48,9 +48,31 @@
     </div>  
     <div id="modal">
         <div id="ventana">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum iure numquam commodi distinctio. Dolorum adipisci nisi sint quisquam quo, vitae est eligendi aliquam quod quas, magnam blanditiis. Fugit, optio rem?</p>
+              <p>Dado de Golpe: d10</p>  <br>
+
+            <p>Habilidades Cláseas:</p>
+            Arte (Int) <br>
+            Montar (Des) <br>
+            Nadar (Fue) <br>
+            Saltar (Fue) <br>
+            Trato con animales (Car) <br>
+            Trepar (Fue). <br>
+
+            Puntos de habilidad (nivel 1): (2+ modificador de Int) x4 <br>
+            puntos de habilidad cada nivel subsiguiente: 2+ modificador de Int <br> 
             <a href="javascript:modal('hidden');" >cerrar</a>
+            <img class="logo"src="../img/guerrero.png" alt="">
         </div>
-    </div>      
+    </div>     
+    <footer>
+            <div>
+            <img class="icon" src="../img/icon1.png" alt="">
+            <img class="icon" src="../img/icon2.png" alt="">
+            <img class="icon" src="../img/icon3.png" alt="">
+            <img class="icon" src="../img/icon4.png" alt="">
+            <img class="icon" src="../img/icon5.png" alt="">
+            <img class="icon" src="../img/icon6.png" alt="">
+        </div>
+        </footer> 
 </body>
 </html>
