--- a/Clases/paladin.html
+++ b/Clases/paladin.html
@@ -29,29 +29,46 @@
     </div>
     <div class="descripcion">
         <p>Descripción</p>
-    <p> Esta clase pertenecen el caballero embarcado en una búsqueda, 
-        el señor feudal dedidado a la conquista, el campeón del rey, 
-        el infante de élite, el mercenario veterano y el rey bandido.
-        Los guerreros pueden ser leales defensores de los necesitados,
-        crueles merodeadores o valientes aventureros. Algunos son
-        bellísimas personas dispuestos a enfrentarse a la muerte a 
-        cambio de un bien mayor. Sin embargo, otros se encuentran
-        entre las peores gentes que es posible hallar: las que matan 
-        sin escrúpulos para obtener un beneficio personal, o incluso
-        por deporte. Los guerreros que no van de aventuras pueden ser
-        soldados, guardias, guardaespaldas, campeones o matones 
-        dedicados al crimen. Los seguidores de esta clase que 
-        se van de aventuras se llaman a sí mismos guerreros, mercenarios, 
-        sicarios o, simplemente, aventureros.</p>
+    <p> La compasión en la búsqueda del bien, la voluntad para 
+        defender la ley y el poder para derrotar al mal; estas
+         son las tres armas del paladín. Pocos poseen la pureza 
+         y devoción que hacen falta para recorrer la senda del 
+         paladín, pero esos pocos son recompensados con el poder 
+         para proteger, sanar y castigar al mal. En un mundo
+          lleno de magos conspiradores, sacerdotes impíos,
+           dragones sedientos de sangre y demonios de los infiernos, 
+           el paladín es la esperanza última que no puede extinguirse. </p>
         <a href="javascript:modal('visible');" >Mas..</a>
     </div>  
     <div id="modal">
         <div id="ventana">
-            <p>Habilidades Cláseas: Arte (Int), Montar (Des), Nadar (Fue), Saltar (Fue), Trato con animales (Car), Trepar (Fue).
-                    Ptos. de habilidad (nivel 1): (2+ modificador de Int) x4
-                    Ptos. de habilidad cada nivel subsiguiente: 2+ modificador de Int </p>
+            <p> Dado de Golpe: d10 </p>
+
+            <p>Habilidades Cláseas: </p>
+             Arte (Int) <br> 
+             Concentración (Con) <br>
+             Diplomacia (Car) <br>
+             Montar (Des) <br>
+             Oficio (Sab) <br>
+             Saber (religión)(Int) <br>
+             Sanar (Sab) <br>
+             Trato con animales (Car)
+            Puentos de habilidad (nivel 1): (2+ modificador de Int) x4 <br>
+            Puntos de habilidad cada nivel subsiguiente: 2+ modificador de Int <br>
+            </p>
             <a href="javascript:modal('hidden');" >cerrar</a>
+            <img class="logo" src="../img/clerigo.png" alt="">
         </div>
-    </div>      
+    </div>  
+    <footer>
+            <div>
+            <img class="icon" src="../img/icon1.png" alt="">
+            <img class="icon" src="../img/icon2.png" alt="">
+            <img class="icon" src="../img/icon3.png" alt="">
+            <img class="icon" src="../img/icon4.png" alt="">
+            <img class="icon" src="../img/icon5.png" alt="">
+            <img class="icon" src="../img/icon6.png" alt="">
+        </div>
+        </footer>    
 </body>
 </html>
