--- a/Clases/Barbaro.html
+++ b/Clases/Barbaro.html
@@ -9,11 +9,11 @@
         
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <script src="../js/modal.js"></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> 
     
     </head>
 <header>
-   
+   <p class="juego">Dungeos and Dragons </p>
 </header>    
  
 <body class="fondo-barbaro">   
