--- a/Clases/Guerrero.html
+++ b/Clases/Guerrero.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GUERRERO</title>
     <link rel="stylesheet" href="../plantilla.css">  
-        
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">  
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <script src="../js/modal.js"></script>
 
@@ -14,7 +14,7 @@
     </head>
 <header>
    
-
+    <p class="juego">Dungeos and Dragons </p>
 </header>    
  
 <body class="fondo-guerrero">   
