--- a/Clases/paladin.html
+++ b/Clases/paladin.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Paladin</title>
     <link rel="stylesheet" href="../plantilla.css">  
-        
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">  
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <script src="../js/modal.js"></script>
 
     
     </head>
 <header>
-   
+    <p class="juego">  Dungeos and Dragons </p>
 </header>    
  
 <body class="fondo-paladin">  
