tres razas listas, humano, elfo y eneano

--- a/razas/elfo.html
+++ b/razas/elfo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HUMANO</title>
+    <title>ELFO</title>
     <link rel="stylesheet" href="../razas.css">  
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">  
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
@@ -16,14 +16,14 @@
     <p class="juego">Dungeons and Dragons </p>
 </header>    
  
-<body class="fondo-humano">             
+<body class="fondo-elfo">             
     <div class="nombre">
        <div >
-           <a href="#"></a> <img id="f-izquierda" src="../img/izquierda.png" alt="">
+           <a href="humano.html"> <img id="f-izquierda" src="../img/izquierda.png" alt="">
            <img id="f-izquierda-verde" src="../img/izquierda2.png" alt="">
-            <a id="titulo">HUMANO</a>       
+            <a id="titulo">ELFO</a>       
            <img id="f-derecha" src="../img/derecha.png" alt="">
-         <a href="elfo.html"><img id="f-derecha-verde" src="../img/derecha2.png" alt=""></a>
+         <a href="enano.html"><img id="f-derecha-verde" src="../img/derecha2.png" alt=""></a>
         </div> 
     </div>
     <div class="descripcion">
