pagina completa nueba barra de cabecea

--- a/clases/guerrero.html
+++ b/clases/guerrero.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GUERRERO</title>
-    <link rel="stylesheet" href="../plantilla.css">  
+    <link rel="stylesheet" href="../css/clases.css">   
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">  
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <script src="../js/modal.js"></script>
@@ -13,7 +13,7 @@
     
     </head>
 <header>
-   
+    <a href="../page.html"> <img class="icon" src="../img/icon1.png" alt=""></a>
     <p class="juego">Dungeos and Dragons </p>
 </header>    
  
@@ -66,12 +66,7 @@
     </div>     
     <footer>
             <div>
-            <img class="icon" src="../img/icon1.png" alt="">
-            <img class="icon" src="../img/icon2.png" alt="">
-            <img class="icon" src="../img/icon3.png" alt="">
-            <img class="icon" src="../img/icon4.png" alt="">
-            <img class="icon" src="../img/icon5.png" alt="">
-            <img class="icon" src="../img/icon6.png" alt="">
+          
         </div>
         </footer> 
 </body>
