--- a/page.html
+++ b/page.html
@@ -14,7 +14,7 @@
 </header>
 <body>
     <div class="cuadro">
-        <input type="button" value="Crear hoja de personaje">
+       <a href="razas/humano.html"> <input type="button" value="Crear hoja de personaje"></a>
     </div>
     
 </body>
