--- a/clases/paladin.html
+++ b/clases/paladin.html
@@ -13,7 +13,7 @@
     
     </head>
 <header>
-    <a href="../page.html"> <img class="icon" src="../img/icon1.png" alt=""></a>
+    <a href="../index.html"> <img class="icon" src="../img/icon1.png" alt=""></a>
     <p class="juego">  Dungeos and Dragons </p>
 </header>    
  
