--- a/clases/paladin.html
+++ b/clases/paladin.html
@@ -21,11 +21,11 @@
        
     <div class="nombre">
        <div >
-        <a href="Guerrero.html"> <img id="f-izquierda" src="../img/izquierda.png" alt="">
+        <a href="guerrero.html"> <img id="f-izquierda" src="../img/izquierda.png" alt="">
            <img id="f-izquierda-verde" src="../img/izquierda2.png" alt="">
             <a id="titulo">PALADIN</a>       
            <img id="f-derecha" src="../img/derecha.png" alt="">
-         <a href="Barbaro.html"><img id="f-derecha-verde" src="../img/derecha2.png" alt=""></a>
+         <a href="barbaro.html"><img id="f-derecha-verde" src="../img/derecha2.png" alt=""></a>
         </div> 
     </div>
     <div class="descripcion">
