--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+    <div class="derecho" >
+        <img class="logo" src="img/logo.jpg" alt="logo">
+        <p> Lorem ipsum dolor sit amet consectetur    
+             adipisicing elit. Quia consectetur
+              corrupti molestias. Id quod, sed
+               eius quos architecto consequatur,
+                magni ab, temporibus rerum unde 
+                error eligendi perspiciatis porro? 
+                Repudiandae, officiis?   
+                        
+            </p>
+            <button class="mas" type="submit" value="otros">Aque es ?</button>
+    </div>
+    <div class="login" >
+    <div class="imgcontainer">
+        <img class="avatar" src="img/img_avatar.png" alt="avatar">
+    </div>
+    <div class="container" >
+        <label for="unombre"> <b>Nombre de Usuario</b> </label>
+        <input type="text" placeholder="Ingresase Nombre de Usuario" name="unombre" required >
+        <label for="psw"> <b>Contraseña</b> </label>
+        <input type="password" placeholder="Ingresase Contraseña" name="psw" required >
+        <button type="submit">Entrar</button>
+    </div>
+    </div>
     
 </body>
 </html>
