--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <input type="text" placeholder="Ingresase Nombre de Usuario" name="unombre" required >
         <label for="psw"> <b>Contraseña</b> </label>
         <input type="password" placeholder="Ingresase Contraseña" name="psw" required >
-        <button type="submit">Entrar</button>
+       <a href="razas/raza.html"> <button type="submit">Entrar</button></a>
     </div>
     </div>
     
