barra lateral razas

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+    <script src="js/autenticacion.js"></script>
     <div class="derecho" >
         <img class="logo" src="img/logo.jpg" alt="logo">
         <p> Lorem ipsum dolor sit amet consectetur    
@@ -33,6 +35,7 @@
        <a href="razas/raza.html"> <button type="submit">Entrar</button></a>
     </div>
     </div>
+    
     
 </body>
 </html>
