--- a/razas/raza.html
+++ b/razas/raza.html
@@ -5,32 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raza</title>
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../css/raza.css">
 </head>
+<header>
+    <h1>RAZAS</h1>
+</header>
 <body>
-    <div class="tag">
-Humano
-    </div>
-    <div class="tag">
-Elfo
-    </div>
-    <div class="tag">
-semi-Elfo
-    </div>
-    <div class="tag">
-Semi-Orco
-    </div>
-    <div class="tag">
-Mediano
-    </div>
-    <div class="tag">
-Gnomo
-    </div>
-    <div class="tag">
-Enano
-    </div>
-  
+<div class="contenedor" >
+<a id="a-humano" href="#humano">HUMANO</a>
+<P id="humano" >Humanos
+        En la estimación de la mayoría de los 
+        mundos, los seres humanos son la más
+         joven de las razas comunes. Tarde en 
+         llegar al mundo y de una presencia de poca
+          duración en comparación con los enanos,
+           elfos, y dragones. Quizás sea por su 
+           corta vida que se esfuerzan por 
+           conseguir tanto como puedan en los años
+            que se les queda, o tal vez sienten que 
+            tienen algo que demostrar a las razas
+             mayores, y por eso construyen sus 
+             imperios poderosos por medio de la 
+             conquista y el comercio. Los seres 
+             humanos son los innovadores, triunfadores 
+             y los pioneros de los mundos.
+        Rasgos Humanos
+        Puntos de característica incrementados:
+         Cada puntuación en característica se 
+         incrementa en 1.
+        Edad: Llegan a la edad adulta en su
+         adolescencia y suelen vivir poco menos de
+         glo.
+        Alineación: No tienden hacia ningún tipo de alineación en particular.
+        Tamaño: Son muy variables en altura y constitución, desde apenas 5 pies a más de 6 pies de altura. Independientemente de su posición en ese rango. su tamaño es mediano.
+        Velocidad: Su velocidad al caminar base es de 30 pies.
+        Idiomas: Pueden hablar, leer y escribir Común y un idioma adicional a su elección. Los seres humanos normalmente aprenden las lenguas de otros pueblos con los que tratan, incluyendo dialectos oscur </P>
+<a id="a-elfo" href="#elfo">ELFO</a>
+<P id="elfo" > Lorem ipsum dolor sit amet 
+         consectetur adipisicing elit. Dolore 
+         architecto ad excepturi, voluptatibus 
+         officia saepe? Illum doloribus ipsam 
+         praesentium, asperiores nihil nulla ad
+          earum facere deleniti temporibus id 
+          eligendi ipsum. </P>
+<a id="a-semi-elfo" href="#semi-elfo">SEMI-ELFO</a>
+<P id="semi-elfo" > Lorem ipsum dolor sit amet 
+        consectetur adipisicing elit. Dolore 
+        architecto ad excepturi, voluptatibus 
+        officia saepe? Illum doloribus ipsam 
+        praesentium, asperiores nihil nulla ad
+        earum facere deleniti temporibus id 
+        eligendi ipsum. </P>
+<a id="a-semi-orco" href="#semi-orco">SEMI-ORCO</a>
+<P id="semi-orco" > Lorem ipsum dolor sit amet 
+        consectetur adipisicing elit. Dolore 
+        architecto ad excepturi, voluptatibus 
+        officia saepe? Illum doloribus ipsam 
+        praesentium, asperiores nihil nulla ad
+        earum facere deleniti temporibus id 
+        eligendi ipsum. </P>
+<a id="a-mediano" href="#mediano">MEDIANO</a>
+<P id="mediano" > Lorem ipsum dolor sit amet 
+        consectetur adipisicing elit. Dolore 
+        architecto ad excepturi, voluptatibus 
+        officia saepe? Illum doloribus ipsam 
+        praesentium, asperiores nihil nulla ad
+        earum facere deleniti temporibus id 
+        eligendi ipsum. </P>
+<a id="a-enano" href="#enano">ENANO</a>
+<P id="enano" > Lorem ipsum dolor sit amet 
+        consectetur adipisicing elit. Dolore 
+        architecto ad excepturi, voluptatibus 
+        officia saepe? Illum doloribus ipsam 
+        praesentium, asperiores nihil nulla ad
+        earum facere deleniti temporibus id 
+        eligendi ipsum. </P>
+<a id="a-gnomo" href="#gnomo">GNOMO</a>
+<P id="gnomo" > Lorem ipsum dolor sit amet 
+        consectetur adipisicing elit. Dolore 
+        architecto ad excepturi, voluptatibus 
+        officia saepe? Illum doloribus ipsam 
+        praesentium, asperiores nihil nulla ad
+        earum facere deleniti temporibus id 
+        eligendi ipsum. </P>
 
+</div>
 
 </body>
 </html>
