--- a/razas/raza.html
+++ b/razas/raza.html
@@ -15,6 +15,7 @@
 <div class="texto-raza" id="humano" >
     <img src="../img/humanos.png" alt="">  
     <p class="texto" >
+    </br>
         En la estimación de la mayoría de los mundos, los seres
         humanos son la más joven de las razas comunes. Tarde en 
         llegar al mundo y de una presencia de poca duración en 
@@ -35,6 +36,7 @@
 <div class="texto-raza" id="elfo" > 
 <img src="../img/elfos.png" alt="">
 <p class="texto" >
+</br>
         En la estimación de la mayoría de los mundos, los seres
         humanos son la más joven de las razas comunes. Tarde en 
         llegar al mundo y de una presencia de poca duración en 
@@ -46,12 +48,15 @@
         por medio de la conquista y el comercio. Los seres 
         humanos son los innovadores, triunfadores y los 
         pioneros de los mundos.
+
+        <a href="script" class="rasgos">Rasgos Humanos</a>
+        <a href="script" class="rasgos" id="activar">Elegir</a>
     </p>    
 </div>
 <a class="titulo" id="a-semi-elfo" href="#semi-elfo">SEMI-ELFO</a>
 <div class="texto-raza" id="semi-elfo" > 
 <img src="../img/semielfos.png" alt=""> 
-<p class="texto" >
+<p class="texto" > </br>
         En la estimación de la mayoría de los mundos, los seres
         humanos son la más joven de las razas comunes. Tarde en 
         llegar al mundo y de una presencia de poca duración en 
@@ -63,12 +68,15 @@
         por medio de la conquista y el comercio. Los seres 
         humanos son los innovadores, triunfadores y los 
         pioneros de los mundos.
+
+        <a href="script" class="rasgos">Rasgos Humanos</a>
+        <a href="script" class="rasgos" id="activar">Elegir</a>
     </p>     
 </div>
 <a class="titulo" id="a-semi-orco" href="#semi-orco">SEMI-ORCO</a>
 <div class="texto-raza" id="semi-orco" > 
 <img src="../img/semiorcos.png" alt="">
-<p class="texto" >
+<p class="texto" > </br>
         En la estimación de la mayoría de los mundos, los seres
         humanos son la más joven de las razas comunes. Tarde en 
         llegar al mundo y de una presencia de poca duración en 
@@ -80,12 +88,15 @@
         por medio de la conquista y el comercio. Los seres 
         humanos son los innovadores, triunfadores y los 
         pioneros de los mundos.
+
+        <a href="script" class="rasgos">Rasgos Humanos</a>
+        <a href="script" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-mediano" href="#mediano">MEDIANO</a>
 <div class="texto-raza" id="mediano" > 
 <img src="../img/medianos.png" alt="">
-<p class="texto" >
+<p class="texto" > </br>
         En la estimación de la mayoría de los mundos, los seres
         humanos son la más joven de las razas comunes. Tarde en 
         llegar al mundo y de una presencia de poca duración en 
@@ -97,12 +108,15 @@
         por medio de la conquista y el comercio. Los seres 
         humanos son los innovadores, triunfadores y los 
         pioneros de los mundos.
+
+        <a href="script" class="rasgos">Rasgos Humanos</a>
+        <a href="script" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-enano" href="#enano">ENANO</a>
 <div class="texto-raza" id="enano" >
 <img src="../img/enanos.png" alt="">
-<p class="texto" >
+<p class="texto" > </br>
         En la estimación de la mayoría de los mundos, los seres
         humanos son la más joven de las razas comunes. Tarde en 
         llegar al mundo y de una presencia de poca duración en 
@@ -114,12 +128,15 @@
         por medio de la conquista y el comercio. Los seres 
         humanos son los innovadores, triunfadores y los 
         pioneros de los mundos.
+
+        <a href="script" class="rasgos">Rasgos Humanos</a>
+        <a href="script" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-gnomo" href="#gnomo">GNOMO</a>
 <div class="texto-raza" id="gnomo" >
 <img src="../img/gnomos.png" alt="">
-<p class="texto" >
+<p class="texto" > </br>
         En la estimación de la mayoría de los mundos, los seres
         humanos son la más joven de las razas comunes. Tarde en 
         llegar al mundo y de una presencia de poca duración en 
@@ -131,6 +148,9 @@
         por medio de la conquista y el comercio. Los seres 
         humanos son los innovadores, triunfadores y los 
         pioneros de los mundos.
+
+        <a href="script" class="rasgos">Rasgos Humanos</a>
+        <a href="script" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 
