--- a/pages/raza.html
+++ b/pages/raza.html
@@ -29,7 +29,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Humanos</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="clase.html" class="rasgos" id="activar">Elegir</a>
     </p>    
 </div>
 <a class="titulo" id="a-elfo" href="#elfo">ELFO</a>
@@ -50,7 +50,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Humanos</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="clase.html" class="rasgos" id="activar">Elegir</a>
     </p>    
 </div>
 <a class="titulo" id="a-semi-elfo" href="#semi-elfo">SEMI-ELFO</a>
@@ -70,7 +70,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Humanos</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="clase.html" class="rasgos" id="activar">Elegir</a>
     </p>     
 </div>
 <a class="titulo" id="a-semi-orco" href="#semi-orco">SEMI-ORCO</a>
@@ -90,7 +90,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Humanos</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="clase.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-mediano" href="#mediano">MEDIANO</a>
@@ -110,7 +110,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Humanos</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="clase.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-enano" href="#enano">ENANO</a>
@@ -130,7 +130,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Humanos</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="clase.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-gnomo" href="#gnomo">GNOMO</a>
@@ -150,7 +150,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Humanos</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="clase.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 
