--- a/pages/clase.html
+++ b/pages/clase.html
@@ -50,7 +50,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Bardo</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 
@@ -72,7 +72,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Clerigo</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p>    
 </div>
 <a class="titulo" id="a-semi-elfo" href="#semi-elfo">EXPLORADOR</a>
@@ -92,7 +92,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Explorador</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p>     
 </div>
 <a class="titulo" id="a-semi-orco" href="#semi-orco">GUERRERO</a>
@@ -112,7 +112,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Guerrero</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-mediano" href="#mediano">HECHICERO</a>
@@ -132,7 +132,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Hechicero</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-enano" href="#enano">MAGO</a>
@@ -152,7 +152,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Mago</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 <a class="titulo" id="a-gnomo" href="#gnomo">MONJE</a>
@@ -172,7 +172,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Monje</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 
@@ -193,7 +193,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Paladín</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 
@@ -214,7 +214,7 @@
         pioneros de los mundos.
 
         <a href="script" class="rasgos">Rasgos Picaro</a>
-        <a href="script" class="rasgos" id="activar">Elegir</a>
+        <a href="lanzar.html" class="rasgos" id="activar">Elegir</a>
     </p> 
 </div>
 
